Don't continually install new throttles.  This fixes a problem wherein gnome-screensaver will stop showing screensavers and just blank the screen after g-p-m enables a DPMS sleep.  See http://bugzilla.gnome.org/show_bug.cgi?id=355279 for more details.

Obtained from:	http://bugzilla.gnome.org/show_bug.cgi?id=355279